fix: sobrenos image

--- a/frontend/antd-demo/src/components/sobreNos.css
+++ b/frontend/antd-demo/src/components/sobreNos.css
@@ -1,6 +1,6 @@
 .container {
     display: flex !important;
-    justify-content: center;
-    align-content: center;
+    justify-content: center !important;
+    align-content: center !important;
   }
   
